Add Var blog posts links